# Windows-x64-debugger

./: .gitignore  CMakeLists.txt  README.md  build.bat  requirements.txt
src/backend/include/: dbg_export.h  dbg_types.h  debug_session.h
src/backend/src/analysis/: disassembler.cpp  disassembler.h  instruction_formatter.cpp  instruction_formatter.h
src/backend/src/api/: dbg_api.cpp  dbg_api.h
src/backend/src/core/: breakpoint.cpp  breakpoint.h  debug_loop.cpp  debug_loop.h  debugger.cpp  debugger.h  memory.cpp  memory.h  memory_region.cpp  memory_region.h  modules.cpp  modules.h  process_control.cpp  process_control.h  registers.cpp  registers.h  run_control.cpp  run_control.h  threads.cpp  threads.h
src/frontend/: main.py
src/frontend/dbg/: __init__.py
src/frontend/dbg/client/: session.py
src/frontend/dbg/ffi/: api.py  errors.py  loader.py  types.py
src/frontend/dbg/tui/: app.py
src/frontend/dbg/tui/style/: app.tcss  colors.py
src/frontend/dbg/tui/widgets/: breakpoint_table_view.py  command_input.py  disasm_view.py  log_view.py  memory_regions_view.py  memory_view.py  register_view.py  thread_callstack_view.py
